# PrismLikeTool

./: .gitignore  LICENSE  PRISM_STYLE_VERSION_MANAGEMENT.md  README.md  REAL_AYON_IMPLEMENTATION_STATUS.md  TASK_SELECTION_AND_VERSION_FEATURES.md  TEST_SCENARIOS.md  THUMBNAIL_SYSTEM_IMPLEMENTATION.md  VERSION_MANAGEMENT_FEATURES.md  VOGUE_MANAGER_COMPLETE_SETUP.md  VOGUE_MANAGER_FUNCTIONS_CLASSES_VARIABLES.md  VOGUE_MANAGER_UPGRADE_PLAN.md  debug_output.txt  isolated_test.py  launch_vogue.bat  launch_vogue.sh  minimal_test.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  simple_main.py  test_asset_creation.py  test_backend.py  test_dialog_asset_creation.py  test_full_asset_creation.py  test_prism_style_versions.py  test_project_loading.py  test_task_selection.py  test_thumbnail_system.py  test_ui.py  test_ui_asset_creation.py  test_ui_tree_update.py  test_version_management.py
ThumbnailTestProject/00_Pipeline/: pipeline.json
VogueProjects/: recent_projects.json  users.json
VogueProjects/CompleteTestProject/: project.json
VogueProjects/CompleteTestProject/events/: 10a0ff84-2049-41ee-91d3-625d512b9663.json
VogueProjects/CompleteTestProject/files/: 9acc6cf2-54bf-4170-a51f-9ac6dec807cb  9acc6cf2-54bf-4170-a51f-9ac6dec807cb.json
VogueProjects/CompleteTestProject/links/: cba143e1-0380-477c-91e7-f9f423f7f510.json
VogueProjects/CompleteTestProject/operations/: 7e39c897-d986-4ae6-809f-91de6171eee3.json
VogueProjects/CompleteTestProject/reviews/: 93ac8e5e-48b0-4424-9d61-b3f872f70aa5.json
VogueProjects/CompleteTestProject/thumbnails/: 16a1d6d6-d830-4ec1-8bf5-69b3883aafb9.json
VogueProjects/RebrandedTest/: project.json
VogueProjects/TestFunctionality/: project.json
VogueProjects/TestProject/: activities.json  project.json
VogueProjects/TestProject/folders/: 004eae8c-8df0-4acc-806b-e4d1667739c6.json  0faec566-08bb-4870-9634-43125b6e3cd0.json  d7574736-b8f3-4a21-8647-75ffdc5a2a1b.json
VogueProjects/TestProject/products/: bc5e1092-c038-4d19-bc96-1651091c8cde.json  ddc70909-a6ca-4e6c-bca7-c702b50fc8c4.json
VogueProjects/TestProject/representations/: a572cf82-2615-41f6-816f-b69f23e07243.json  c723fce1-fcb2-411a-88f3-aa80884b2d44.json  d08e2466-0e4c-4de5-96d4-8134141d2619.json
VogueProjects/UpgradedUITest/: project.json
VogueProjects/meoww/00_Pipeline/: pipeline.json  (+1 more)
prism/Prism Files/: Prism_Complete_Documentation.txt
prism/Prism documents/: InstallLocations.json  PluginPaths.json  Prism.json
scripts/: dev_run_app.bat  dev_run_app.sh  maya_install.bat  maya_install.sh
src/: test_backend.py  test_ui_functionality.py
src/vogue_app/: __init__.py  ayon_ui_with_prism_backend.py  colors.py  controller.py  controller_backup.py  controller_clean.py  dialogs.py  main.py  qss.py  thumbnail_preview.py  ui.py  ui_simple.py
src/vogue_core/: __init__.py  api_local.py  ayon_backend.py  dcc_detection.py  dcc_integration.py  fs.py  logging_utils.py  manager.py  models.py  publish.py  real_ayon_backend.py  schema.py  settings.py  thumbnail_generator.py  thumbnails.py
src/vogue_maya/: __init__.py  dock.py  maya_bridge.py  shelf.mel  tool.py
tests/: __init__.py  test_assets.py  test_json_integrity.py  test_project_layout.py  test_scan_filesystem.py  test_shots.py  test_versions.py
(+77 files in other folders)
